# crypto-handies

./: .gitignore  LICENSE  README.md
python/: pyproject.toml
python/examples/: generate_mnemo.py  mnemo_to_key.py  storage.py
python/src/crypto_handies/: __init__.py
python/src/crypto_handies/wallets_oc/: README.md  __init__.py  hdmnemo.py  hdstorage.py  mnemorator.py
python/src/crypto_handies/wallets_oc/mnemo/: hdmnemo.py  mnemorator.py
